haproxy-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-service-nodeport
spec:
  type: NodePort
  selector:
    name: haproxy-nodeport
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001
