haproxy-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-service
spec:
  selector:
    name: haproxy
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haproxy-ingress
  labels:
    name: haproxy-ingress
spec:
  rules:
  - host: haproxy.kurniadi.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: haproxy-service
            port: 
              number: 80
